--- a/faq.html
+++ b/faq.html
@@ -25,7 +25,7 @@
 					<li>1. <a href="#what-is-it">What is the wireless gateway and how does it work?</a></li>
 					<li>2. <a href="#what-kind-of-hotspots">What kinds of devices does the gateway help connect?</a></li>
 					<li>3. <a href="#security">Are you sure the network is secure?</a></li>
-					<li>4. <a href="#power">How much electricity does a gateway use?</a></li>
+					<li>4. <a href="#power">How much electricity or internet does a gateway use?</a></li>
 					<li>5. <a href="#anything-else-to-do">Are you sure there's nothing else I have to do?</a></li>
 				</ol>
 			</div>
@@ -46,7 +46,7 @@
 					<p>Our gateways use state-of-the-art, encrypted IoT technology. Only devices on the LoRa network can connect to them - like smart water meters, climate sensors, etc. Laptops, TV’s, and cell phones cannot connect to our gateways, and therefore cannot transfer data through them. Security is our #1 priority.</p>
 				</footer>
 				<footer id="power" class="major container medium">
-					<h3>How much electricity does a gateway use?</h3>
+					<h3>How much electricity or internet does a gateway use?</h3>
 					<p>Our gateways use as much electricity as a 5W LED lightbulb, and as much data as someone who streams a movie or two every month (around 20GB per month)</p>
 				</footer>
 				<footer id="anything-else-to-do" class="major container medium">
