Add a photo example of an antenna placement

--- a/faq.html
+++ b/faq.html
@@ -27,6 +27,7 @@
 					<li>3. <a href="#security">Are you sure the network is secure?</a></li>
 					<li>4. <a href="#power">How much electricity or internet does a gateway use?</a></li>
 					<li>5. <a href="#anything-else-to-do">Are you sure there's nothing else I have to do?</a></li>
+					<li>5. <a href="#look-like">What does it look like?</a></li>
 				</ol>
 			</div>
 
@@ -52,6 +53,11 @@
 				<footer id="anything-else-to-do" class="major container medium">
 					<h3>Are you sure there's nothing else I have to do?</h3>
 					<p>Other than letting us into your building in order to mount the antenna, nothing! On rare occasions we may need access to check on the hotspot if it goes down. However, we have not needed this for any of the hotspots we have installed so far, and it’s very rare for these hotspots to need manual attention once they're setup!</p>
+				</footer>
+				<footer id="look-like" class="major container medium">
+					<h3>What does it look like?</h3>
+					<p>Here's an example! Note that they can vary in appearance & mounting style depending on your location. We will try to minimize its appearance and adjust it asthetically to your needs.</p>
+					<img style="width: 100%; height: 100%;" src="images/antenna-example.jpg"></img>
 				</footer>
 			</div>
 
