change everywhere to connected roofs

--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>NY & NJ Rooftop Wireless</title>
+		<title>NY & NJ Connected Roofs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -92,7 +92,7 @@
 
 
 					<ul class="copyright">
-						<li>&copy; NY & NJ Rooftop Wireless. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; NY & NJ Connected Roofs. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</div>
