--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>NY & NJ Rooftop Wireless</title>
+		<title>NY & NJ Connected Roofs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 </br>
 </br>
 				<div style="padding: 20px; background-color:rgba(220, 220, 220, 0.2); width: 100%;">
-					<h1>NY & NJ Rooftop Wireless</h1>
+					<h1>NY & NJ Connected Roofs</h1>
 					<p>Rent your empty roof space, help connect the community</p>
 
 				</div>
@@ -242,7 +242,7 @@
 					</form>
 
 					<ul class="copyright">
-						<li>&copy; NY & NJ Rooftop Wireless. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; NY & NJ Connected Roofs. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</div>
