Fix formatting issue

--- a/index.html
+++ b/index.html
@@ -44,17 +44,24 @@
 						<a href="#" class="image icon solid fas fa-broadcast-tower"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>We pay you for the space you're not using</h3>
-							<p>We pay businesses or property managers <strong>up to $1,500 per year</strong> for access to a few square feet of their roof space. The network we are helping to build powers devices like air quality sensors, water leak detectors and more.</p>
+							<p>We pay businesses or property managers <strong>up to $1,500 per year</strong> for access to a few square feet of their roof space. </p>
 						</div>
 					</section>
 					<section class="feature left">
+						<a href="#" class="image icon solid fas fa-people-carry"><img src="images/pic02.jpg" alt="" /></a>
+						<div class="content">
+              <h3>Help connect the community</h3>
+							<p>The network we are helping to build powers devices like air quality sensors, water leak detectors and more</p>
+						</div>
+					</section>
+					<section class="feature right">
 						<a href="#" class="image icon solid fas fa-tools"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Set-up is easy. Don’t lift a finger.</h3>
 							<p>We handle 100% of the installation process. Installation is quick and professional. No maintenance by you. We customize each placement to meet your needs.</p>
 						</div>
 					</section>
-					<section class="feature right">
+					<section class="feature left">
 						<a href="#" class="image icon solid fas fa-money-bill-wave"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>What's the catch?</h3>
