--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		<title>NY & NJ Connected Roofs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta og:title="Connected Roofs">
+    <meta og:description="Rent your unused roof space, connect your community, earn
+    passive income">
+    <meta og:image="images/antenna-hero.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
